--- a/package.json
+++ b/package.json
@@ -1,51 +1,53 @@
 {
-    "name": "Goose",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@devexpress/dx-react-chart-material-ui": "^4.0.4",
-        "@testing-library/jest-dom": "^5.15.0",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
-        "aos": "^2.3.4",
-        "axios": "^1.4.0",
-        "bootstrap": "^5.3.0",
-        "chart.js": "^4.3.0",
-        "copy-to-clipboard": "^3.3.3",
-        "material-paper": "^0.0.8",
-        "react": "^17.0.2",
-        "react-bootstrap": "^2.7.4",
-        "react-chartjs-2": "^5.2.0",
-        "react-dom": "^17.0.2",
-        "react-open-app": "^1.0.3",
-        "react-router-dom": "^5.2.0",
-        "react-router-hash-link": "^2.4.3",
-        "react-scripts": "5.0.1",
-        "web3": "^4.0.1",
-        "web3modal": "^1.9.12"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "Goose",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@devexpress/dx-react-chart-material-ui": "^4.0.4",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "aos": "^2.3.4",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
+    "copy-to-clipboard": "^3.3.3",
+    "material-paper": "^0.0.8",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^17.0.2",
+    "react-open-app": "^1.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "5.0.1",
+    "web3": "^4.0.1",
+    "web3modal": "^1.9.12"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
